--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -12,7 +12,10 @@
     "development": {
       "extends": "base",
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
     },
     "preview": {
       "extends": "base",
