--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -5,7 +5,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start --ios",
+    "dev": "expo start --ios --dev-client",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "lint": "eslint .",
@@ -15,7 +15,16 @@
     "ios": "expo run:ios"
   },
   "dependencies": {
+    "@animatereactnative/marquee": "^0.2.0",
+    "@aws-amplify/react-native": "^1.0.10",
     "@expo/metro-config": "^0.10.7",
+    "@gluestack-style/react": "^1.0.31",
+    "@gluestack-ui/config": "^1.0.10",
+    "@gluestack-ui/themed": "^1.0.33",
+    "@gorhom/bottom-sheet": "^4.6.0",
+    "@gorhom/portal": "^1.0.14",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-picker/picker": "2.4.10",
     "@shopify/flash-list": "1.4.3",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.0",
@@ -23,26 +32,37 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "aws-amplify": "^6.0.10",
     "expo": "^49.0.21",
     "expo-apple-authentication": "~6.1.2",
+    "expo-blur": "~12.4.1",
+    "expo-camera": "~13.4.4",
+    "expo-clipboard": "~4.3.1",
     "expo-constants": "~14.4.2",
     "expo-crypto": "^12.4.1",
+    "expo-dev-client": "~2.4.12",
     "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.14",
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "5.1.6",
     "nativewind": "^4.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
     "react-native-url-polyfill": "^1.3.0",
-    "superjson": "2.2.1"
+    "superjson": "2.2.1",
+    "uuid": "^9.0.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@acme/api": "workspace:^0.1.0",
