--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -2,10 +2,10 @@
   "name": "@acme/expo",
   "version": "0.1.0",
   "private": true,
-  "main": "expo-router/entry",
+  "main": "index.js",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start --ios --dev-client",
+    "dev": "expo start --android --dev-client",
     "dev:android": "expo start --android",
     "dev:ios": "expo start --ios",
     "lint": "eslint .",
