--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start --android --dev-client",
-    "dev:android": "expo start --android",
-    "dev:ios": "expo start --ios",
+    "dev": "expo start --ios --dev-client",
+    "dev:android": "expo start --android --dev-client",
+    "dev:ios": "expo start --ios --dev-client",
     "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit",
@@ -59,6 +59,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.1",
+    "react-native-svg": "13.9.0",
     "react-native-url-polyfill": "^1.3.0",
     "superjson": "2.2.1",
     "uuid": "^9.0.1",
