Adding facebook auth

--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@animatereactnative/marquee": "^0.2.0",
     "@aws-amplify/react-native": "^1.0.10",
+    "@expo-google-fonts/dela-gothic-one": "^0.2.3",
+    "@expo-google-fonts/outfit": "^0.2.3",
     "@expo/metro-config": "^0.10.7",
     "@gluestack-style/react": "^1.0.31",
     "@gluestack-ui/config": "^1.0.10",
@@ -35,6 +37,7 @@
     "aws-amplify": "^6.0.10",
     "expo": "^49.0.21",
     "expo-apple-authentication": "~6.1.2",
+    "expo-auth-session": "~5.0.2",
     "expo-blur": "~12.4.1",
     "expo-camera": "~13.4.4",
     "expo-clipboard": "~4.3.1",
@@ -48,6 +51,7 @@
     "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "lottie-react-native": "5.1.6",
     "nativewind": "^4.0.16",
     "react": "18.2.0",
