--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -25,6 +25,7 @@
     "@gluestack-ui/themed": "^1.0.33",
     "@gorhom/bottom-sheet": "^4.6.0",
     "@gorhom/portal": "^1.0.14",
+    "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-picker/picker": "2.4.10",
     "@shopify/flash-list": "1.4.3",
@@ -44,6 +45,7 @@
     "expo-constants": "~14.4.2",
     "expo-crypto": "^12.4.1",
     "expo-dev-client": "~2.4.12",
+    "expo-font": "~11.4.0",
     "expo-image": "~1.3.5",
     "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
@@ -67,6 +69,7 @@
     "react-native-url-polyfill": "^1.3.0",
     "superjson": "2.2.1",
     "uuid": "^9.0.1",
+    "yup": "^1.3.3",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
