Add development-simulator configuration to eas.json

--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -24,6 +24,13 @@
         "simulator": true
       }
     },
+    "development-simulator": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      }
+    },
     "production": {
       "extends": "base",
       "distribution": "store",
