--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@acme/expo",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "main": "index.js",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "expo start --ios --dev-client",
-    "dev:android": "expo start --android --dev-client",
-    "dev:ios": "expo start --ios --dev-client",
+    "dev": "NODE_ENV=local expo start --ios --dev-client",
+    "dev:android": "NODE_ENV=local expo start --android --dev-client",
+    "dev:ios": "NODE_ENV=local expo start --ios --dev-client",
     "lint": "eslint .",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "typecheck": "tsc --noEmit",
