--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -12,10 +12,7 @@
     "development": {
       "extends": "base",
       "developmentClient": true,
-      "distribution": "internal",
-      "ios": {
-        "simulator": true
-      }
+      "distribution": "internal"
     },
     "preview": {
       "extends": "base",
