--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "git clean -xdf .expo .turbo node_modules",
-    "dev": "NODE_ENV=development expo start --ios --dev-client",
+    "dev": "NODE_ENV=development npx expo start --ios --dev-client",
     "dev:android": "NODE_ENV=development expo start --android --dev-client",
     "dev:ios": "NODE_ENV=development expo start --ios --dev-client",
     "lint": "eslint .",
