--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -54,6 +54,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
+    "javascript-time-ago": "^2.5.10",
     "lottie-react-native": "5.1.6",
     "nativewind": "^4.0.16",
     "react": "18.2.0",
@@ -67,6 +68,7 @@
     "react-native-screens": "~3.22.1",
     "react-native-svg": "13.9.0",
     "react-native-url-polyfill": "^1.3.0",
+    "react-time-ago": "^7.3.3",
     "superjson": "2.2.1",
     "uuid": "^9.0.1",
     "yup": "^1.3.3",
