--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -62,6 +62,7 @@
     "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
