--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acme/expo",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "private": true,
   "main": "index.js",
   "scripts": {
@@ -61,6 +61,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
+    "react-native-gen-ui": "^1.4.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.3.0",
