--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -19,16 +19,16 @@
     "@aws-amplify/react-native": "^1.0.10",
     "@expo-google-fonts/dela-gothic-one": "^0.2.3",
     "@expo-google-fonts/outfit": "^0.2.3",
-    "@expo/metro-config": "^0.10.7",
+    "@expo/metro-config": "^0.18.11",
     "@gluestack-style/react": "^1.0.31",
     "@gluestack-ui/config": "^1.0.10",
     "@gluestack-ui/themed": "^1.0.33",
     "@gorhom/bottom-sheet": "^4.6.0",
     "@gorhom/portal": "^1.0.14",
     "@hookform/resolvers": "^3.3.4",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-picker/picker": "2.4.10",
-    "@shopify/flash-list": "1.4.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.7.5",
+    "@shopify/flash-list": "1.6.4",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.7",
@@ -36,43 +36,44 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "aws-amplify": "^6.0.10",
+    "babel-preset-expo": "^11.0.14",
     "date-fns": "^3.6.0",
-    "expo": "^49.0.21",
-    "expo-apple-authentication": "~6.1.2",
-    "expo-auth-session": "~5.0.2",
-    "expo-blur": "~12.4.1",
-    "expo-camera": "~13.4.4",
-    "expo-clipboard": "~4.3.1",
-    "expo-constants": "~14.4.2",
-    "expo-crypto": "^12.4.1",
-    "expo-dev-client": "~2.4.12",
-    "expo-font": "~11.4.0",
-    "expo-image": "~1.3.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-linking": "~5.0.2",
-    "expo-location": "~16.1.0",
-    "expo-router": "2.0.14",
-    "expo-secure-store": "~12.3.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-web-browser": "~12.3.2",
+    "expo": "^51.0.31",
+    "expo-apple-authentication": "~6.4.2",
+    "expo-auth-session": "~5.5.2",
+    "expo-blur": "~13.0.2",
+    "expo-camera": "~15.0.15",
+    "expo-clipboard": "~6.0.3",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "^13.0.2",
+    "expo-dev-client": "~4.0.25",
+    "expo-font": "~12.0.9",
+    "expo-image": "~1.12.15",
+    "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-location": "~17.0.1",
+    "expo-router": "3.5.23",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "javascript-time-ago": "^2.5.10",
-    "lottie-react-native": "5.1.6",
+    "lottie-react-native": "6.7.0",
     "lucide-react-native": "^0.428.0",
     "nativewind": "^4.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
-    "react-native": "0.72.6",
+    "react-native": "0.74.5",
     "react-native-gen-ui": "^1.4.1",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-maps": "^1.18.0",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-maps": "^1.14.0",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.1",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "~3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-time-ago": "^7.3.3",
     "superjson": "2.2.1",
