--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -67,6 +67,7 @@
     "react-native": "0.74.5",
     "react-native-gen-ui": "^1.4.1",
     "react-native-gesture-handler": "~2.16.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "^1.14.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.10.1",
