--- a/package.json
+++ b/package.json
@@ -28,8 +28,5 @@
     "turbo": "^1.11.1",
     "typescript": "^5.3.3"
   },
-  "prettier": "@acme/prettier-config",
-  "dependencies": {
-    "@changesets/cli": "^2.27.7"
-  }
+  "prettier": "@acme/prettier-config"
 }
