--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -31,10 +31,10 @@
     "@shopify/flash-list": "1.6.4",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.0",
-    "@tanstack/react-query": "^5.8.7",
-    "@trpc/client": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@tanstack/react-query": "^5.51.23",
+    "@trpc/client": "^11.0.0-rc.477",
+    "@trpc/react-query": "^11.0.0-rc.477",
+    "@trpc/server": "^11.0.0-rc.477",
     "aws-amplify": "^6.0.10",
     "babel-preset-expo": "^11.0.14",
     "date-fns": "^3.6.0",
