--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -18,19 +18,19 @@
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.0",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@tanstack/react-query": "^5.8.7",
+    "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.8.7",
     "@tanstack/react-query-next-experimental": "5.8.7",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@trpc/client": "^11.0.0-rc.477",
+    "@trpc/next": "^11.0.0-rc.477",
+    "@trpc/react-query": "^11.0.0-rc.477",
+    "@trpc/server": "^11.0.0-rc.477",
     "lucide-react": "^0.295.0",
     "next": "^14.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "2.2.1",
-    "zod": "^3.22.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:^0.2.0",
