--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@acme/db": "workspace:^0.3.0",
     "@supabase/supabase-js": "^2.39.0",
-    "@trpc/client": "next",
-    "@trpc/server": "next",
+    "@tanstack/react-query": "^5.51.23",
+    "@trpc/client": "^11.0.0-rc.477",
+    "@trpc/react-query": "^11.0.0-rc.477",
+    "@trpc/server": "^11.0.0-rc.477",
     "nanoid": "^5.0.4",
     "openai": "^4.25.0",
     "superjson": "2.2.1",
-    "zod": "^3.22.2"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:^0.2.0",
