--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -32,9 +32,9 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.8.7",
-    "@trpc/client": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@trpc/client": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
+    "@trpc/react-query": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
+    "@trpc/server": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "aws-amplify": "^6.0.10",
     "babel-preset-expo": "^11.0.14",
     "date-fns": "^3.6.0",
@@ -74,6 +74,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "~3.31.1",
+    "react-native-skeletons": "^1.3.6",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-time-ago": "^7.3.3",
