--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -20,11 +20,11 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-query-devtools": "^5.8.7",
-    "@tanstack/react-query-next-experimental": "5.8.7",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@tanstack/react-query-next-experimental": "^5.8.7",
+    "@trpc/client": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
+    "@trpc/next": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
+    "@trpc/react-query": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
+    "@trpc/server": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "lucide-react": "^0.295.0",
     "next": "^14.0.3",
     "react": "18.2.0",
