--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -27,6 +27,7 @@
     "@gorhom/portal": "^1.0.14",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "2.7.5",
     "@shopify/flash-list": "1.6.4",
     "@supabase/auth-helpers-react": "^0.4.2",
