--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -51,6 +51,7 @@
     "expo-font": "~12.0.9",
     "expo-image": "~1.12.15",
     "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
     "expo-router": "3.5.23",
