--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -69,6 +69,7 @@
     "react-native-gen-ui": "^1.4.1",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-maps": "^1.14.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.10.1",
