--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,6 +25,9 @@
     "@trpc/next": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "@trpc/react-query": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "@trpc/server": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
+    "framer-motion": "^11.11.1",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.295.0",
     "next": "^14.0.3",
     "react": "18.2.0",
