feat: Add new consult form and related components; update authentication redirect and add recording router

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -25,13 +25,18 @@
     "@trpc/next": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "@trpc/react-query": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "@trpc/server": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
+    "axios": "^1.7.9",
     "framer-motion": "^11.11.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.295.0",
     "next": "^14.0.3",
     "react": "18.2.0",
+    "react-audio-stream": "^1.0.6",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.4.0",
+    "replicate": "^1.0.1",
     "superjson": "2.2.1",
     "zod": "^3.22.2"
   },
