--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,6 +15,13 @@
   "dependencies": {
     "@acme/api": "workspace:^0.3.0",
     "@acme/db": "workspace:^0.2.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.0",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -26,6 +33,9 @@
     "@trpc/react-query": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "@trpc/server": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "framer-motion": "^11.11.1",
     "lottie-react": "^2.4.0",
     "lottie-web": "^5.12.2",
@@ -35,10 +45,13 @@
     "react-audio-stream": "^1.0.6",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "replicate": "^1.0.1",
     "superjson": "2.2.1",
-    "zod": "^3.22.2"
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@acme/eslint-config": "workspace:^0.2.0",
