--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -15,13 +15,20 @@
   "dependencies": {
     "@acme/api": "workspace:^0.3.0",
     "@acme/db": "workspace:^0.2.0",
+    "@ai-sdk/deepseek": "^0.1.5",
+    "@ai-sdk/openai": "^1.1.2",
+    "@ai-sdk/replicate": "^0.1.2",
+    "@friendliai/ai-provider": "^0.2.1",
     "@hookform/resolvers": "^3.3.4",
+    "@openrouter/ai-sdk-provider": "^0.0.6",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.0",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -32,6 +39,7 @@
     "@trpc/next": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "@trpc/react-query": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
     "@trpc/server": "11.0.0-alpha-next-2023-11-24-13-58-38.113",
+    "ai": "^4.1.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -47,6 +55,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "replicate": "^1.0.1",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.5.2",
